--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+beautifulsoup4==4.3.2
 numpy==1.9.1
 pandas==0.15.2
+patsy==0.3.0
+python-dateutil==2.4.0
+pytz==2014.10
 scipy==0.15.1
+six==1.9.0
+statsmodels==0.6.1
